# ThermoAE-Training

./: Makefile  README.md  pyproject.toml  setup.cfg
Dados/: OP_data_MF2_tank.xlsx  OP_data_MF3.xlsx  Op_data_MF1_tank.xlsx  Op_data_MF_boi.xlsx  Op_data_MF_hx.xlsx
Dados/Dados_gerados/: modelo.pt
src/: RunnerTraining.py  runner.py
src/configs/: .env  AEConfig.py  DataConfig.py  Debug_Config.py  GpuConfig.py  PathConfig.py  config.py
src/db/: db_model.py
src/modelo/: criar_dataloaders.py  ler_dados.py  modelo.py  tratar_dados.py
